plugins {
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'

}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
    maven { url = "https://maven.fabricmc.net/" }
	mavenCentral()
	maven { url = 'https://repo.spongepowered.org/maven' }
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"modid" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	
	// Mixin annotation processor with all dependencies
	annotationProcessor "org.spongepowered:mixin:0.8.7:processor"
	// ASM is required by mixin annotation processor
	annotationProcessor "org.ow2.asm:asm:9.7"
	annotationProcessor "org.ow2.asm:asm-tree:9.7"
	annotationProcessor "org.ow2.asm:asm-commons:9.7"
	annotationProcessor "org.ow2.asm:asm-util:9.7"
	annotationProcessor "org.ow2.asm:asm-analysis:9.7"
	annotationProcessor "com.google.guava:guava:33.0.0-jre"
	annotationProcessor "com.google.code.gson:gson:2.11.0"
}

processResources {
    // Avoid failing when multiple refmap files are present — prefer the first and exclude duplicates
    // This prevents the "Entry ... is a duplicate" error during the copy phase.
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

	inputs.property "version", project.version

	// Include any generated mixin refmap produced by the annotation processor (client-*-refmap.json)
	from(layout.buildDirectory.dir("classes/java/client")) {
		include 'client-*refmap.json'
		rename { String f -> 'savemanager.refmap.json' }
	}

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "-Xlint:deprecation"
}